# data-monitor-prometheus-stack

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  bq_template.py  ds_template.py  main.py  pyproject.toml
bq_sql/project1/: project1-example.sql
bq_sql/project2/: project2-example.sql
ds/project1/: project1-example.json
